Fixed distorted images

--- a/src/components/Dashboard/Profile/Profile.css
+++ b/src/components/Dashboard/Profile/Profile.css
@@ -3,4 +3,5 @@
   width: 100px;
   overflow:hidden;
   border-radius: 50%;
+  object-fit: cover;
 }
