--- a/src/components/Dashboard/Project/Project.css
+++ b/src/components/Dashboard/Project/Project.css
@@ -1,5 +1,5 @@
 .project_pic {
   width: 200px;
   height: 200px;
-
+  object-fit: cover;
 }
